# bench

./: .cmake-format.yaml  .gitignore  .justfile  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.h  main.cpp  test_eigen.cpp  test_mlx.cpp  tutorial.cpp  tutorial.h
.github/workflows/: cmake-ninja-macos.yml
cmake/: Cache.cmake  CompileOptions.cmake  download-build-tools.cmake  omp.cmake
include/: tutorial.h
scripts/: clang-format-added-lines  clang-format-diff
src/: CMakeLists.txt  tutorial_main.cpp
tests/: CMakeLists.txt  main.cpp  test_accelerate.cpp  test_mlx.cpp  test_openmp.cpp
